[tool.poetry]
name = "fast-header"
version = "0.1.3"
description = ""
authors = ["Chongchen Chen <chenkovsky@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true
